// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoSave> renders correctly 1`] = `null`;

exports[`<CheckBox> renders correctly 1`] = `
<label
  className="sc-htpNat cxybjL"
>
  <input
    aria-invalid={false}
    checked={false}
    className="sc-bdVaJa hPFzLn"
    name="checkbox"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="a"
  />
  <span
    className="sc-bwzfXH kpWatx"
  >
    A
  </span>
</label>
`;

exports[`<Form> renders correctly 1`] = `"Alo"`;

exports[`<Radio> renders correctly 1`] = `
<label
  className="sc-EHOje fvYDam"
>
  <input
    aria-invalid={false}
    checked={false}
    className="sc-bxivhb kcGHbr"
    name="radio"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="a"
  />
  <span
    className="sc-ifAKCX fzxfPR"
  >
    A
  </span>
</label>
`;

exports[`<Select> renders correctly 1`] = `
<select
  aria-invalid={false}
  className="sc-gzVnrw hCNSdy"
  name="select"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <option
    value="a"
  >
    A
  </option>
  <option
    value="b"
  >
    B
  </option>
  <option
    value="c"
  >
    C
  </option>
</select>
`;

exports[`<SubmitError> renders correctly 1`] = `null`;

exports[`<TextArea> renders correctly 1`] = `
<textarea
  aria-invalid={false}
  className="sc-iwsKbI hrhgbR"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
/>
`;

exports[`<TextField> renders correctly 1`] = `
<input
  aria-invalid={false}
  className="sc-bZQynM cdtlqu"
  name="textfield"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  type="text"
  value=""
/>
`;

exports[`<ValidationError> renders correctly 1`] = `null`;
